--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Cake stuff
 ############
-
 tmp/*
 [Cc]onfig/core.php
 [Cc]onfig/database.php
@@ -9,8 +8,11 @@ app/[Cc]onfig/core.php
 app/[Cc]onfig/database.php
 !empty
 
+# Bake files
+##################
+cakephp/
+
 #OS / IDE stuff
 #########
-
 .DS_Store
 .idea/
